tests/bad/arrays/4.lat
int main () {
    int[] a = new int[10];
    int b;

    printInt(b.length);
    return 0;
}